# message-analytics

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_api.ps1
models/: spam_classifier.joblib
src/: analytics.py  data_loader.py  main.py
src/api/: main.py
